# vbank

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INTEROP.md  TIME_VALUE_AND_RELEVANCE.md  VOTE_SUPPLY_CROWDFUND.md
src/knitweb_vank/: __init__.py  crowdfund.py  election.py  liquid.py  poll.py  proximity.py  ranked.py  recency.py  registry.py  settle.py  tally.py  validation.py  vault.py
src/knitweb_vbank/: __init__.py  election.py  liquid.py  poll.py  ranked.py  tally.py
src/vank/: __init__.py  dao.py  fund.py  ledger.py  loan.py  portfolio.py  savings.py
src/vank/static/: dashboard.html  poker.html
tests/property/: test_vank_crowdfund.py  test_vank_dao.py  test_vank_dao_edge.py  test_vank_election.py  test_vank_end_to_end.py  test_vank_fund.py  test_vank_gate_stub.py  test_vank_ledger.py  test_vank_liquid.py  test_vank_loan.py  test_vank_poll.py  test_vank_portfolio.py  test_vank_proximity.py  test_vank_ranked.py  test_vank_savings.py  test_vank_settle.py  test_vank_tally.py  test_vank_vote_supply.py  test_vbank_election.py  test_vbank_end_to_end.py  test_vbank_gate_stub.py  test_vbank_liquid.py  test_vbank_poll.py  test_vbank_ranked.py  test_vbank_tally.py
